Don't crash on restarting layout on a changed doc

BUG:253658

svn path=/trunk/koffice/; revision=1184219